--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </figure>
             <figure>
               <div class="img-user">
-                <img src="/img/user5.jpg" alt="" />
+                <img src="/assets/user5.jpg" alt="" />
               </div>
               <div class="bg-text">
                 <h3>Leopoldo <br /> Pirela</h3>
